--- a/app/src/main/res/layout/activity_add_group_chat.xml
+++ b/app/src/main/res/layout/activity_add_group_chat.xml
@@ -23,7 +23,7 @@
         style="@style/input__bg"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_36sdp"
-        android:layout_marginHorizontal="@dimen/_18sdp"
+        android:layout_marginHorizontal="@dimen/_12ssp"
         android:layout_marginTop="15dp"
         android:clipToPadding="false"
         android:fontFamily="@font/nunito_regular"
@@ -31,7 +31,8 @@
         android:inputType="text"
         android:paddingHorizontal="@dimen/_12ssp"
         android:paddingVertical="12.5dp"
-        android:textColorHint="@color/primary__color"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:textSize="@dimen/_11ssp" />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -43,15 +44,16 @@
             style="@style/input__bg"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_36sdp"
-            android:layout_marginHorizontal="@dimen/_18sdp"
+            android:layout_marginHorizontal="@dimen/_12ssp"
             android:clipToPadding="false"
             android:fontFamily="@font/nunito_regular"
             android:hint="Member Nickname"
             android:inputType="text"
             android:paddingHorizontal="@dimen/_12ssp"
             android:paddingVertical="12.5dp"
-            android:textColorHint="@color/primary__color"
+            android:textColorHint="@color/white"
             android:textSize="@dimen/_11ssp"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +84,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_18sdp"
+        android:layout_marginHorizontal="@dimen/_12ssp"
         android:layout_marginTop="25dp"
         android:fontFamily="@font/nunito_regular"
         android:text="Images"
@@ -92,7 +94,7 @@
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_18sdp"
+        android:padding="@dimen/_12ssp"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:dividerDrawable="@drawable/empty_divider"
@@ -181,9 +183,9 @@
             android:id="@+id/save"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginHorizontal="@dimen/_18sdp"
+            android:layout_marginHorizontal="@dimen/_12ssp"
             android:layout_marginTop="20dp"
-            android:backgroundTint="@color/primary__color"
+            android:background="@drawable/bottom_bar_bg"
             android:clipToOutline="true"
             android:elevation="10dp"
             android:fontFamily="@font/nunito_medium"
