--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -88,6 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
                 app:hintEnabled="true"
                 app:passwordToggleTint="@color/primary__color">
 
@@ -98,6 +99,7 @@
                     style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Email"
+                    android:textColor="@color/white"
                     android:inputType="textEmailAddress"
                     android:paddingHorizontal="@dimen/_12ssp"
                     android:paddingVertical="12.5dp"
@@ -108,6 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
                 app:hintEnabled="true"
                 app:passwordToggleTint="@color/primary__color">
 
@@ -118,6 +121,7 @@
                     style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Full Name"
+                    android:textColor="@color/white"
                     android:inputType="text"
                     android:paddingHorizontal="@dimen/_12ssp"
                     android:paddingVertical="12.5dp"
@@ -128,6 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
                 app:hintEnabled="true"
                 app:passwordToggleTint="@color/primary__color">
 
@@ -137,6 +142,7 @@
                     android:layout_height="@dimen/_36sdp"
                     style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
+                    android:textColor="@color/white"
                     android:hint="Nick name"
                     android:inputType="textEmailAddress"
                     android:paddingHorizontal="@dimen/_12ssp"
@@ -148,9 +154,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
                 app:hintEnabled="true"
                 app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/primary__color">
+                app:passwordToggleTint="@color/active_bg">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password"
@@ -159,6 +166,7 @@
                     style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Password"
+                    android:textColor="@color/white"
                     android:inputType="textPassword"
                     android:paddingHorizontal="@dimen/_12ssp"
                     android:paddingVertical="12.5dp"
@@ -169,9 +177,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_18sdp"
                 android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
                 app:hintEnabled="true"
                 app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/primary__color">
+                app:passwordToggleTint="@color/active_bg">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/passwordConfirm"
@@ -180,6 +189,7 @@
                     style="@style/input__bg"
                     android:fontFamily="@font/nunito_regular"
                     android:hint="Password Confirm"
+                    android:textColor="@color/white"
                     android:inputType="textPassword"
                     android:paddingHorizontal="@dimen/_12ssp"
                     android:paddingVertical="12.5dp"
@@ -196,7 +206,7 @@
                     android:layout_height="@dimen/_40sdp"
                     android:layout_marginHorizontal="@dimen/_18sdp"
                     android:layout_marginTop="20dp"
-                    android:backgroundTint="@color/primary__color"
+                    android:background="@drawable/bottom_bar_bg"
                     android:clipToOutline="true"
                     android:elevation="10dp"
                     android:fontFamily="@font/nunito_medium"
