--- a/app/src/main/res/layout/item_container_received_message.xml
+++ b/app/src/main/res/layout/item_container_received_message.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/receiverMessageContainer"
     android:padding="@dimen/_4sdp">
 
     <ImageView
@@ -30,14 +31,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/message_bg_secondary"
+        app:backgroundTint="@color/grey_third"
         android:fontFamily="@font/nunito_regular"
         android:paddingStart="@dimen/_12sdp"
         android:paddingTop="@dimen/_8sdp"
         android:paddingEnd="@dimen/_12sdp"
         android:paddingBottom="@dimen/_8sdp"
         android:layout_marginLeft="5dp"
-        android:textColor="@color/primary__color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
+        android:text="hello"
         app:layout_constraintStart_toEndOf="@+id/imageProfile"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@+id/sendImage"
@@ -49,9 +52,19 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_4sdp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="@dimen/_8sdp"
         android:fontFamily="@font/nunito_regular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textMessage"/>
+
+    <ImageView
+        android:id="@+id/likeImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/likemessage"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textMessage"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
