--- a/app/src/main/res/drawable/background_content_top.xml
+++ b/app/src/main/res/drawable/background_content_top.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/white"/>
+    <solid android:color="#0f1112"/>
     <corners android:bottomLeftRadius="@dimen/_32sdp" android:bottomRightRadius="@dimen/_32sdp"/>
 </shape>
