--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,16 +12,18 @@
         style="@style/input__bg"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_36sdp"
-        android:layout_marginHorizontal="@dimen/_18sdp"
+        android:layout_marginHorizontal="@dimen/_12ssp"
         android:layout_marginTop="25dp"
         android:clipToPadding="false"
         android:drawableEnd="@drawable/baseline_search_24"
+        android:drawableTint="@color/white"
         android:fontFamily="@font/nunito_regular"
         android:hint="Search"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="@dimen/_12ssp"
         android:paddingVertical="13dp"
-        android:textColorHint="@color/primary__color"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:textSize="@dimen/_11ssp"
          />
     <androidx.recyclerview.widget.RecyclerView
