--- a/app/src/main/res/layout/item_container_notification.xml
+++ b/app/src/main/res/layout/item_container_notification.xml
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_regular"
             android:text="John doe sent you a message"
+            android:textColor="@color/grey_font"
             android:textSize="@dimen/_11ssp" />
     </LinearLayout>
 
