--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/newhomeicon"
         android:title=""/>
     <item
         android:id="@+id/search"
@@ -13,10 +13,10 @@
         android:title="" />
     <item
         android:id="@+id/chat"
-        android:icon="@drawable/message"
+        android:icon="@drawable/messagechat"
         android:title=""/>
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/profile"
+        android:icon="@drawable/person"
         android:title=""/>
 </menu>
