--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,17 +13,20 @@
         <item name="cornerSize">50%</item>
     </style>
     <style name="active_bg"><item name="android:background">@color/active_bg</item></style>
-    <style name="page_bg"><item name="android:background">@color/white</item></style>
-    <style name="text__color"><item name="android:textColor">@color/black</item></style>
+    <style name="page_bg"><item name="android:background">#0f1112</item></style>
+    <style name="text__color"><item name="android:textColor">@color/white</item></style>
     <style name="input__bg"><item name="android:background">@drawable/edit__input</item></style>
     <style name="chat__header"><item name="android:background">@drawable/chat_header</item></style>
     <style name="chat_message"><item name="android:textColor">@color/white</item></style>
     <style name="fab_bg"><item name="android:backgroundTint">@color/white</item></style>
-    <style name="card_bg"><item name="android:backgroundTint">@color/secondary__color</item></style>
+    <style name="card_bg"><item name="android:backgroundTint">@color/grey_second</item></style>
     <style name="content__top"><item name="android:background">@drawable/background_content_top</item> </style>
     <style name="content__bottom"><item name="android:background">@drawable/background_content_bottom</item> </style>
     <style name="StoryDialogAnimation">
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+    <style name="Button.PrimarySecond" parent="ThemeOverlay.AppCompat">
+        <item name="colorAccent">@color/grey_second</item>
     </style>
 </resources>
